<resources>
    <string name="app_name">ButtonNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">SEARCH</string>
    <string name="share">SHARE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">HOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="likes">LIKES</string>
    <string name="profile">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagram">Instagram</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_account">Don\'t have an account? <b>Sing up</b></string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="discover_people">Discover People</string>
    <string name="change_photo">Change photo</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="web_site">web site</string>
    <string name="bio">bio</string>
    <string name="private_information">private information</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="share_to">Share to</string>
    <string name="enter_a_caption_here">Enter a caption here …</string>
    <string name="follow">Follow</string>
    <string name="next">next</string>
    <string name="enter_full_name_and_password">Enter full name and password</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="you_should_enter_your_password">You should enter your password</string>
    <string name="profile_saved">Profile saved</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="username_is_clicked">Username is clicked</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="this_email_already_exists">This email already exists</string>
    <string name="please_enter_full_name_and_password">Please enter full name and password</string>
    <string name="something_wrong_happened">Something wrong happened. Please try again later</string>

    <plurals name="likes_count">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>
</resources>