<?xml version="1.0" encoding="utf-8"?>
<com.example.buttonnavigation.views.KeyboardAwareScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/instagram_image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/insta"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/email_input"
        style="@style/big_input"
        app:layout_constraintTop_toBottomOf="@id/instagram_image"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_input"
        style="@style/big_input"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:hint="@string/password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_btn"
        style="@style/big_btn"
        android:onClick="onClick"
        android:text="@string/log_in"
        app:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        tools:ignore="MissingConstraints,UsingOnClickInXml"/>

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create_account"
        android:gravity="center"
        android:background="@drawable/top_border_gray"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</com.example.buttonnavigation.views.KeyboardAwareScrollView>