<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.editprofile.EditProfileActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:contentInsetStart="0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/close_image"
                style="@style/icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_close"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/tv"
                style="@style/toolbar_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/close_image"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/edit_profile"/>

            <ImageView
                android:id="@+id/save_image"
                style="@style/icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check"
                tools:ignore="VectorDrawableCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/person"
        android:layout_marginTop="15dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/gray" />

    <TextView
        android:id="@+id/change_photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name_label"
        style="@style/edit_profile_label"
        app:layout_constraintTop_toBottomOf="@id/change_photo_text"
        android:text="@string/name"
        android:labelFor="@id/name_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:inputType="text"
        android:id="@+id/name_input"
        style="@style/edit_profile_input"
    app:layout_constraintTop_toBottomOf="@id/name_label"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/username_label"
        style="@style/edit_profile_label"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        android:labelFor="@id/username_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username_input"
        style="@style/edit_profile_input"
        app:layout_constraintTop_toBottomOf="@id/username_label"
        android:inputType="text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/website_label"
        style="@style/edit_profile_label"
        app:layout_constraintTop_toBottomOf="@id/username_input"
        android:text="@string/web_site"
        android:labelFor="@id/website_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/website_input"
        style="@style/edit_profile_input"
        app:layout_constraintTop_toBottomOf="@id/website_label"
        android:inputType="text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bio_label"
        style="@style/edit_profile_label"
        android:text="@string/bio"
        app:layout_constraintTop_toBottomOf="@id/website_input"
        android:labelFor="@id/bio_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/bio_input"
        style="@style/edit_profile_input"
        app:layout_constraintTop_toBottomOf="@id/bio_label"
        android:inputType="text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/private_info_text"
        style="@style/edit_profile_label"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bio_input"
        android:text="@string/private_information"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email_label"
        style="@style/edit_profile_label"
        app:layout_constraintTop_toBottomOf="@id/private_info_text"
        android:text="@string/email"
        android:labelFor="@id/email_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_input"
        style="@style/edit_profile_input"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phone_label"
        style="@style/edit_profile_label"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:text="@string/phone"
        android:labelFor="@id/phone_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/phone_input"
        style="@style/edit_profile_input"
        app:layout_constraintTop_toBottomOf="@id/phone_label"
        android:inputType="phone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>