<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:contentInsetStart="0dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_text"
                style="@style/toolbar_title"
                android:textStyle="bold"
                tools:text="username"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text=""/>

            <ImageView
                android:id="@+id/add_friends_image"
                style="@style/icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/settings_image"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_friends"
                tools:ignore="VectorDrawableCompat" />
            <ImageView
                android:id="@+id/settings_image"
                style="@style/icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_menu"
                tools:ignore="VectorDrawableCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        app:civ_border_color="@color/gray"
        app:civ_border_width="1dp"
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="0dp"
        android:src="@drawable/person"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_profile_btn"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"/>


    <TextView
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="@id/posts_text"
        app:layout_constraintEnd_toEndOf="@id/posts_text"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/edit_profile_btn"
        style="@style/profile_text_count"
        android:id="@+id/posts_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="50" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/posts_count_text"
        app:layout_constraintEnd_toStartOf="@id/followers_text"
        app:layout_constraintStart_toStartOf="@id/edit_profile_btn"
        style="@style/profile_text"
        android:id="@+id/posts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts" />

    <TextView
        app:layout_constraintStart_toStartOf="@id/followers_text"
        app:layout_constraintEnd_toEndOf="@id/followers_text"
        app:layout_constraintBaseline_toBaselineOf="@id/posts_count_text"
        style="@style/profile_text_count"
        android:id="@+id/followers_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100" />

    <TextView
        app:layout_constraintBaseline_toBaselineOf="@id/posts_text"
        app:layout_constraintStart_toEndOf="@id/posts_text"
        app:layout_constraintEnd_toStartOf="@id/following_text"
        style="@style/profile_text"
        android:id="@+id/followers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers" />

    <TextView
        app:layout_constraintStart_toStartOf="@id/following_text"
        app:layout_constraintEnd_toEndOf="@id/following_text"
        app:layout_constraintBaseline_toBaselineOf="@id/posts_count_text"
        style="@style/profile_text_count"
        android:id="@+id/following_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="200" />


    <TextView
        app:layout_constraintBaseline_toBaselineOf="@id/posts_text"
        app:layout_constraintStart_toEndOf="@id/followers_text"
        app:layout_constraintEnd_toEndOf="@id/edit_profile_btn"
        style="@style/profile_text"
        android:id="@+id/following_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following" />

    <Button
        android:layout_marginBottom="5dp"
        android:id="@+id/edit_profile_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:width="0.1dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/black"
        android:minHeight="0dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        app:backgroundTint="@color/white"
        app:cornerRadius="3dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/profile_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/top_border_gray"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation_view"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_btn">

    </androidx.recyclerview.widget.RecyclerView>

    <include layout="@layout/bottom_nav_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>